--- a/extent-report.html
+++ b/extent-report.html
@@ -52,7 +52,7 @@
 		<!-- nav-right -->
 		<ul id='nav-mobile' class='right hide-on-med-and-down nav-right'>
 			<a href='#!'>
-			<span class='label blue darken-3 suite-start-time'>יולי 27, 2025 01:54:10 אחה״צ</span>
+			<span class='label blue darken-3 suite-start-time'>יולי 28, 2025 12:29:14 אחה״צ</span>
 			</a>
 		</ul>
 	</div>
@@ -67,7 +67,7 @@
 				<i class='material-icons'>warning</i> Status
 				</a>
 				<ul id='tests-toggle' class='dropdown-content'>
-										<li status='fail'><a href='#!'>Fail <i class='material-icons red-text'>cancel</i></a></li>
+										<li status='pass'><a href='#!'>Pass <i class='material-icons green-text'>check_circle</i></a></li>
 					<li class='divider'></li>
 					<li status='clear' clear='true'><a href='#!'>Clear Filters <i class='material-icons'>clear</i></a></li>
 				</ul>
@@ -110,10 +110,10 @@
                     <canvas id='parent-analysis' width='90' height='70'></canvas>
                 </div>
                 <div class='block text-small'>
-                    <span class='tooltipped' data-position='top' data-tooltip='0%'><span class='strong'>0</span> test(s) passed</span>
+                    <span class='tooltipped' data-position='top' data-tooltip='100%'><span class='strong'>1</span> test(s) passed</span>
                 </div>
                 <div class='block text-small'>
-                    <span class='strong tooltipped' data-position='top' data-tooltip='100%'>1</span> test(s) failed, <span class='strong tooltipped' data-position='top' data-tooltip='0%'>0</span> skipped
+                    <span class='strong tooltipped' data-position='top' data-tooltip='0%'>0</span> test(s) failed, <span class='strong tooltipped' data-position='top' data-tooltip='0%'>0</span> skipped
                 </div>
             </div>
         </div>
@@ -131,17 +131,17 @@
 </div>	<div class='subview-left left'>
 		<div class='view-summary'>
 			<ul id='test-collection' class='test-collection'>
-				<li class='test displayed active  fail' status='fail' bdd='false' test-id='1'>
+				<li class='test displayed active  pass' status='pass' bdd='false' test-id='1'>
 					<div class='test-heading'>
-						<span class='test-name'>testSearchBirthAllowance(WebDriver)</span>
-						<span class='test-time'>יולי 27, 2025 01:54:10 אחה״צ</span>
-						<span class='test-status right fail'>fail</span>
+						<span class='test-name'>testSearchResults()</span>
+						<span class='test-time'>יולי 28, 2025 12:29:14 אחה״צ</span>
+						<span class='test-status right pass'>pass</span>
 					</div>
 					<div class='test-content hide'>
 <div class='test-time-info'>
-	<span class='label start-time'>יולי 27, 2025 01:54:10 אחה״צ</span>
-	<span class='label end-time'>יולי 27, 2025 01:54:10 אחה״צ</span>
-	<span class='label time-taken grey lighten-1 white-text'>0h 0m 0s+16ms</span>
+	<span class='label start-time'>יולי 28, 2025 12:29:14 אחה״צ</span>
+	<span class='label end-time'>יולי 28, 2025 12:29:31 אחה״צ</span>
+	<span class='label time-taken grey lighten-1 white-text'>0h 0m 16s+435ms</span>
 </div>
 <div class='test-steps'>
 	<table class='bordered table-results'>
@@ -153,23 +153,11 @@
 			</tr>
 		</thead>
 		<tbody>
-			<tr class='log' status='warning'>
-				<td class='status warning' title='warning' alt='warning'><i class='material-icons'>warning</i></td>
-				<td class='timestamp'>13:54:10</td>
+			<tr class='log' status='pass'>
+				<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
+				<td class='timestamp'>12:29:31</td>
 				<td class='step-details'>
-						לא ניתן לצלם מסך כי הדרייבר לא מאותחל
-					
-				</td>
-			</tr>
-			<tr class='log' status='fail'>
-				<td class='status fail' title='fail' alt='fail'><i class='material-icons'>cancel</i></td>
-				<td class='timestamp'>13:54:10</td>
-				<td class='step-details'>
-						טסט נכשל: Unable to obtain: chromedriver, error chromedriver must be a regular file: C:\Users\user1\Downloads\chromedriver-win32\chromedriver-win32
-For documentation on this error, please visit: https://www.selenium.dev/documentation/webdriver/troubleshooting/errors/driver_location/
-Build info: version: '4.20.0', revision: '866c76ca80'
-System info: os.name: 'Windows 11', os.arch: 'amd64', os.version: '10.0', java.version: '17.0.11'
-Driver info: driver.version: ChromeDriver
+						Test passed
 					
 				</td>
 			</tr>
@@ -218,19 +206,19 @@ Driver info: driver.version: ChromeDriver
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Start
-					<div class='panel-lead'>יולי 27, 2025 01:54:10 אחה״צ</div>
+					<div class='panel-lead'>יולי 28, 2025 12:29:14 אחה״צ</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 			 		End
-			 		<div class='panel-lead'>יולי 27, 2025 01:54:10 אחה״צ</div>
+			 		<div class='panel-lead'>יולי 28, 2025 12:29:31 אחה״צ</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Time Taken
-					<div class='panel-lead'>0h 0m 0s+275ms</div>
+					<div class='panel-lead'>0h 0m 16s+846ms</div>
 				</div>
 			</div>
 		</div>
@@ -242,13 +230,13 @@ Driver info: driver.version: ChromeDriver
 		<script>
 			var statusGroup = {
                 parentCount: 1,
-				passParent: 0,
-				failParent: 1,
+				passParent: 1,
+				failParent: 0,
 				fatalParent: 0,
 				errorParent: 0,
 				warningParent: 0,
 				skipParent: 0,
-				exceptionsParent: 1,
+				exceptionsParent: 0,
 				childCount: 0,
 				passChild: 0,
 				failChild: 0,
@@ -273,7 +261,7 @@ Driver info: driver.version: ChromeDriver
 		</script>
 		<script>
 			var timeline = {
-			        "testSearchBirthAllowance(WebDriver)":0.016
+			        "testSearchResults()":16.435
 			};
 		</script>
 	
